@@ -313,6 +313,12 @@ void ViewWrapper::connectDocument(Document *doc)
 		toolCtrl, &tools::ToolController::zoomRequested, m_controller,
 		&CanvasController::zoomTo);
 	connect(
+		toolCtrl, &tools::ToolController::resetRotationToolRequested,
+		m_controller, &CanvasController::resetRotationTool);
+	connect(
+		toolCtrl, &tools::ToolController::moveRotationToolRequested,
+		m_controller, &CanvasController::moveRotationTool);
+	connect(
 		toolCtrl, &tools::ToolController::foregroundColorChanged, m_scene,
 		&CanvasScene::setForegroundColor);
 	connect(
